[project]
name = "requeue"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "loki", email = "gunlinux@ya.ru" }
]
requires-python = ">=3.10"
dependencies = [
    "coredis>=5.0.1",
    "marshmallow>=4.0.0",
    "marshmallow-enum>=1.5.1",
]

[project.scripts]
requeue = "requeue:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
